--- a/student/templates/student/course_list.html
+++ b/student/templates/student/course_list.html
@@ -18,7 +18,7 @@
 {% endif %}
 
 <div class="badge badge-info float-right">
-    <h5 class="mb-0">{{ user.student.session }}</h5>
+    <h5 class="mb-0">{{ session }}</h5>
 </div>
 
 <div class="row mb-4">
