--- a/student/templates/student/exam_reg.html
+++ b/student/templates/student/exam_reg.html
@@ -43,7 +43,7 @@
         
      </div>
     <div class="col">
-       <div class="badge badge-info float-right"> <h5 class="mb-0">{% now "Y" %}/1</h5></div> 
+       <div class="badge badge-info float-right"> <h5 class="mb-0">{{ session }}</h5></div>
     </div>
 </div>
 
