--- a/lecturer/templates/lecturer/board/edit_topic.html
+++ b/lecturer/templates/lecturer/board/edit_topic.html
@@ -4,6 +4,14 @@
 
 {% block head_title %} Topic | StudyWare {% endblock %}
 
+{% block extra_css %}
+<link href="#" rel="stylesheet"/>
+{% endblock %}
+
+{% block js %}
+<script src="#"></script>
+{% endblock %}
+
 {% block content %}
  <nav aria-label="breadcrumb">
     <ol class="breadcrumb mt-4">
