--- a/student/templates/student/course_register.html
+++ b/student/templates/student/course_register.html
@@ -55,7 +55,7 @@
                             <th class="small font-weight-bold"></th>
                             <th class="text-center small font-weight-bold">Credit Unit</th>
                             <th class="text-center small font-weight-bold">Designation</th>
-                            <th class="text-center small font-weight-bold">semester</th>
+                            <th class="text-center small font-weight-bold">Semester</th>
                             <th class="small font-weight-bold">Cost</th>
                         </tr>
                     </thead>
