--- a/lecturer/templates/lecturer/board/topic_posts.html
+++ b/lecturer/templates/lecturer/board/topic_posts.html
@@ -19,7 +19,7 @@
         {% endif %}
      </div>
       <div class="card-body pb-2 pt-1">
-          <p class="card-text"><div class="container p-0">{{ topic.message.html|safe }}</div></p>
+          <p class="card-text"><div class="container p-0">{{ topic.message }}</div></p>
           <small class="text-muted float-right">{{ topic.added_on|naturaltime }}</small>
       </div>
     </div>
@@ -30,7 +30,7 @@
           <strong>{{ topic.subject|capfirst }}</strong>
         </div>
         <div class="col-12">
-          {{ topic.message.html|safe }}
+          {{ topic.message }}
         </div>
         <div class="col-12">
           <small><a href="{% url 'lecturer:edit_topic' topic.pk %}" class="btn btn-primary btn-sm">Edit</a></small>
@@ -55,7 +55,7 @@
                 <small class="text-muted">{{ post.created_at|naturaltime }}</small>
               </div>
             </div>
-            {{ post.message.html|safe }}
+            {{ post.message }}
           </div>
         </div>
       </div>
@@ -64,7 +64,7 @@
     <div class="container p-2 border-bottom mobile mb-2">  
       <div class="row">
         <div class="col-12">
-          {{ post.message.html|safe }}
+          {{ post.message }}
         </div>
         <div class="col-12">
           <img src="{{ post.created_by.photo.url }}" alt="{{ post.created_by.username }}" width="20" height="20" class="rounded-circle mr-1">
