--- a/student/templates/student/board/topic_posts.html
+++ b/student/templates/student/board/topic_posts.html
@@ -18,7 +18,7 @@
   <div class="card-title py-2 px-3 m-0"><strong>{{ topic.subject|capfirst }}</strong> <small class="text-muted float-right">{{ topic.added_on|naturaltime }}</small></div>
     <div class="card-body pb-2 pt-1">
     
-      <p class="card-text"><div class="container p-0">{{ topic.message.html|safe }}</div></p>
+      <p class="card-text"><div class="container p-0">{{ topic.message }}</div></p>
       <div class="row">
       <div class="col-2">
          <a href="{% url 'student:reply_topic' topic.pk %}" class="btn btn-primary btn-sm mt-2" role="button">Reply</a>
@@ -38,7 +38,7 @@
         <strong>{{ topic.subject|capfirst }}</strong><small class="text-muted float-right pt-1">{{ topic.added_on|naturaltime }}</small>
       </div>
       <div class="col-12">
-        {{ topic.message.html|safe }}
+        {{ topic.message }}
       </div>
       <div class="col-12">
          <a href="{% url 'student:reply_topic' topic.pk %}" >Reply</a>
@@ -66,7 +66,7 @@
               <small class="text-muted">{{ post.created_at|naturaltime }}</small>
             </div>
           </div>
-          {{ post.message.html|safe }}
+          {{ post.message }}
         </div>
         
         {% if post.created_by == user %}
@@ -82,7 +82,7 @@
     <div class="container p-2 border-bottom mobile mb-2">  
       <div class="row">
         <div class="col-12">
-          {{ post.message.html|safe }}
+          {{ post.message }}
         </div>
         <div class="col-12">
           <img src="{{ post.created_by.photo.url }}" alt="{{ post.created_by.username }}" width="20" height="20" class="rounded-circle mr-1">
@@ -103,5 +103,7 @@
   {% endfor %}
 
   {% include 'includes/pagination.html' %}
-
+<script>
+   
+</script>
 {% endblock %}
