--- a/student/templates/student/take_tma_form.html
+++ b/student/templates/student/take_tma_form.html
@@ -8,35 +8,32 @@
 <link rel="stylesheet" href="{% static 'assets/vendor/mathlive/mathlive.core.css' %}">
 <link rel="stylesheet" href="{% static 'assets/vendor/mathlive/mathlive.css' %}">
 <style>
+    input[type=radio]{
+    visibility: hidden;
+    position: absolute;
+    }
 
+    input[type=radio] + label{
+    cursor:pointer;
+    }
+    
+    input[type=radio] + label:before{
+    width:16px;
+    height:16px;
+    content: " ";
+    display:inline-block;
+    border:1px solid #ccc;
+    border-radius:50%; 
+    box-shadow: inset 0 -3px 6px #e4e4e4;
+    transition: 0.3s;
+    margin: 10px;
+    margin-bottom:5px;
+    }
 
-
-input[type=radio]{
-
-  visibility: hidden;
-  position: absolute;
-}
-input[type=radio] + label{
-  cursor:pointer;
-}
-input[type=radio] + label:before{
-  width:16px;
-  height:16px;
-  content: " ";
-  display:inline-block;
-  border:1px solid #ccc;
-  border-radius:50%; 
-  box-shadow: inset 0 -3px 6px #e4e4e4;
-  transition: 0.3s;
-  margin: 10px;
-  margin-bottom:5px;
-}
-
-/* CHECKED */
-input[type=radio]:checked + label:before{
-  box-shadow: inset 0 0 0 5px #2196F3;
-}
-
+    /* CHECKED */
+    input[type=radio]:checked + label:before{
+    box-shadow: inset 0 0 0 5px #2196F3;
+    }
 </style>
 {% endblock %}
 
@@ -55,7 +52,8 @@ input[type=radio]:checked + label:before{
         <div class="badge badge-warning">{{ tma.course.code}}</div> <strong>{{tma.title|upper}}</strong>
     </h5>
 </nav>
-<div class="container-fluid mt-3">
+
+<div class="container-fluid mt-5">
     <div class="row mb-5">
         <div class="col-md-8 col-lg-8">
             <div class="card">
@@ -83,28 +81,28 @@ input[type=radio]:checked + label:before{
                     <div class="mb-3 mt-3">
                         <img class="mx-auto d-block img-thumbnail" src="{{ user.photo.url }}" width="150" height="150">
                     </div>
-                        <div class="card text-primary" style="border-radius:0;">
-                            <div class="card-body mb-0">
-                                <p class="card-text ml-5">Name : {{user.full_name}}</p>
-                                <p class="card-text ml-5">Matric Number : {{user.username}}</p>
-                                <p class="card-text ml-5">Programme : {{user.student.programme}} {{ user.department}}</p>
-                            </div>
+                    <div class="card text-primary" style="border-radius:0;">
+                        <div class="card-body mb-0">
+                            <p class="card-text ml-5">Name : {{user.full_name}}</p>
+                            <p class="card-text ml-5">Matric Number : {{user.username}}</p>
+                            <p class="card-text ml-5">Programme : {{user.student.programme}} {{ user.student.department}}</p>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-    <div class="text-center">
-        <a class="btn btn-sm btn-primary mr-2" href="{% url 'student:dashboard' %}" role="button"><span class="fas fa-tachometer-alt"></span> Dashboard</a>
-        <a class="btn btn-sm btn-success" href="{% url 'student:tma_list' %}" role="button"><span class="fas fa-list-alt"></span> TMA</a>
+    <div class="text-center mb-5">
+        <a class="btn btn-primary mr-2" href="{% url 'student:dashboard' %}" role="button"><span class="fas fa-tachometer-alt"></span> Dashboard</a>
+        <a class="btn btn-success" href="{% url 'student:tma_list' %}" role="button"><span class="fas fa-list-alt"></span> TMA</a>
     </div>
 </div>
+
 
 {% else %}
 <style>
     body {
-background-color: #686868;
+         background-color: #686868;
 }
 </style>
 
