--- a/lecturer/templates/lecturer/base_home.html
+++ b/lecturer/templates/lecturer/base_home.html
@@ -19,7 +19,7 @@
 
 <nav class="sb-topnav navbar navbar-expand navbar-dark bg-dark">
   <a class="navbar-brand" href="{% url 'home' %}">Study<b>Ware</b></a>
-  <button class="btn btn-link btn-sm order-1 order-lg-0" id="sidebarToggle" href="#"><i class="fas fa-bars"></i></button>
+  <a class="btn btn-link btn-sm order-1 order-lg-0" id="sidebarToggle" href="#"><i class="fas fa-bars"></i></a>
 
   <!-- Navbar Search -->
   <div class="d-none d-md-inline-block ml-auto mr-0 mr-md-3 my-2 my-md-0">
