--- a/student/templates/student/tma_list.html
+++ b/student/templates/student/tma_list.html
@@ -11,7 +11,7 @@
 <nav aria-label="breadcrumb">
     <ol class="breadcrumb mt-4">
         <li class="breadcrumb-item">Assessment</li>
-        <li class="breadcrumb-item active">Tutor Marked Assesment</li>
+        <li class="breadcrumb-item active">Tutor Marked Assessment</li>
     </ol>
 </nav>
 
