--- a/student/templates/student/take_tma_form.html
+++ b/student/templates/student/take_tma_form.html
@@ -69,7 +69,7 @@
                     <form method="post" novalidate>
                         {% csrf_token %}
                         {{ form|crispy }}
-                        <button type="submit" class="btn btn-sm btn-primary float-right">Next <i class="fa fa-angle-double-right" aria-hidden="true"></i></button>
+                        <button type="submit" class="btn rounded-pill btn-outline-success float-right"><i class="fa fa-angle-double-right" aria-hidden="true"></i></button>
                     </form>
                 </div>
             </div>
@@ -83,18 +83,14 @@
                     </div>
                     <div class="card text-primary" style="border-radius:0;">
                         <div class="card-body mb-0">
-                            <p class="card-text ml-5">Name : {{user.full_name}}</p>
-                            <p class="card-text ml-5">Matric Number : {{user.username}}</p>
-                            <p class="card-text ml-5">Programme : {{user.student.programme}} {{ user.student.department}}</p>
+                            <p class="card-text">Name : {{user.full_name}}</p>
+                            <p class="card-text">Matric Number : {{user.username}}</p>
+                            <p class="card-text">Programme : {{user.student.programme}}</p>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
-    <div class="text-center mb-5">
-        <a class="btn btn-primary mr-2" href="{% url 'student:dashboard' %}" role="button"><span class="fas fa-tachometer-alt"></span> Dashboard</a>
-        <a class="btn btn-success" href="{% url 'student:tma_list' %}" role="button"><span class="fas fa-list-alt"></span> TMA</a>
     </div>
 </div>
 
